# OO2026Tehtavat

Week1/Eka/: .gitignore  CMakeLists.txt  main.cpp
Week2/Toka/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Week3/Kolmas/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Week4/Neljas/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
